Fix visibility issue with tag change menu

--- a/frontend/src/app/(app)/upload/page.module.css
+++ b/frontend/src/app/(app)/upload/page.module.css
@@ -47,8 +47,7 @@
 }
 
 .tag_change_container {
-    height: 100%;
-    padding-bottom: 5%;
+    height: 90svh;
 }
 
 .select_button {
